# Primer

./: .gitignore  README.md
cli/: Cargo.toml  vault.json
cli/docs/: command.md
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
